# geo-ai-agent

./: .gitignore  .python-version  .renderignore  ARCHITECTURE.md  AWS_DEPLOYMENT.md  COMPLETE_SOLUTION.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_FIX.md  DEPLOYMENT_READY.md  DEPLOY_FREE.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  EXAMPLES_ADDED.md  EXAMPLES_GUIDE.md  FINAL_FEATURES.md  IMPLEMENTATION_COMPLETE.md  MULTI_AGENT_ARCHITECTURE.md  NETLIFY_DEPLOYMENT.md  NEXT_STEPS_RENDER.md  PROJECT_SUMMARY.md  QUICK_FIX_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REALTIME_DISPLAY.md  RENDER_COMPLETE_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  RENDER_SIMPLE_SETUP.md  RESTART_INSTRUCTIONS.md  SETUP.md  START_HERE_DEPLOYMENT.md  TEST_OUTPUT.md  fly.toml  netlify.toml  pyproject.toml  render.yaml  requirements.txt  run.sh
archive/: BUG_FIX_EXPLANATION.md  COMPARE_FIX_COMPLETE.md  COMPARE_PAGE_FIX.md  EVALUATOR_COMPLETE.md  EVALUATOR_WORKING.md  FINAL_STATUS.md  FINAL_SUMMARY.md  INDEX.md  README_EVALUATOR.md  RESOURCES.md  SUCCESS_SUMMARY.md  SYSTEM_PERFECT.md  TESTED_AND_FIXED.md  VISUAL_GUIDE.md  WHERE_TO_SEE_DATA.md
deliverables/: 00_EXECUTIVE_SUMMARY.md  01_AGENT_DESIGN_DOCUMENT.md  02_DEMONSTRATION.py  03_CODE_EXAMPLES.md  04_FUTURE_ROADMAP.md  DELIVERABLES_SUMMARY.txt  DIFFERENTIATION.md  EXECUTIVE_SUMMARY.md  FINAL_AGENT_DESIGN_DOCUMENT.md  INDEX.md  PACKAGE_COMPLETE.txt  README.md  START_HERE.md  SUBMISSION_CHECKLIST.txt  SUBMISSION_GUIDE.md  SUBMISSION_READY.md  SUBMIT_THIS.txt
deploy/: AWS_KEEP_ALIVE_GUIDE.md  geo-agent-frontend.service  geo-agent.service  setup-systemd.sh
examples/: README.md  api_demo.py  logging_demo.py  perplexity_demo.py  simple_demo.py  (+1 more)
src/: main.py  (+2 more)
(+40 files in other folders)
