[project]
name = "geo-expert-agent"
version = "0.1.0"
description = "GEO Expert Agent - AI-powered analysis system"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "langchain>=0.1.0,<0.2.0",
    "langchain-openai>=0.0.2,<0.1.0",
    "langchain-community>=0.0.10,<0.1.0",
    "langgraph>=0.0.20,<0.1.0",
    "langsmith>=0.1.0,<0.2.0",
    "openai>=1.12.0,<2.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "tiktoken>=0.8.0,<1.0.0",
    "chromadb==0.4.22",
    "sentence-transformers==2.2.2",
    "httpx>=0.25.2,<1.0.0",
    "beautifulsoup4>=4.12.2,<5.0.0",
    "lxml>=5.3.0,<6.0.0",
    "requests>=2.31.0,<3.0.0",
    "aiohttp>=3.9.1,<4.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "sqlalchemy>=2.0.23,<3.0.0",
    "alembic>=1.13.1,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "jinja2>=3.1.2,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "black>=23.12.1,<24.0.0",
    "flake8>=6.1.0,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
managed = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "venv", ".venv", "build", "dist"]

